Scrollbar fix, inputmulti support,, more options fix

--- a/vipr-portal/portal/public/stylesheets/workflowbuilder.less
+++ b/vipr-portal/portal/public/stylesheets/workflowbuilder.less
@@ -474,6 +474,7 @@ table, th , td {
     top: 0;
     width: 408px;
     overflow-x: hidden;
+    height: 100%;
 }
 
 #builderController {
